--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,7 +50,7 @@
     <string name="no_review_rate_poem_body">Tell others what you think</string>
 
     <!-- Poem Detail -->
-    <string name="poem_detail_label_writer">Written by:\ </string>
+    <string name="poem_detail_label_writer">Written by: %s</string>
 
     <!-- Review -->
     <string name="review_menu_edit">Edit</string>
